deb and rpm packages in different profiles